9. Istio-Traffic-Management/istio-ingress-stg.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingress-stg
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ip-address-type: ipv4
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
  labels:
    app: istio-ingress-stg
spec:
  rules:
    - http:
        paths:
        - path: /*
          backend:
            serviceName: istio-ingressgateway
            servicePort: 9000
